# starclock

./: .gitattributes  .gitignore  Cargo.toml
crates/starclock-agent-api/: Cargo.toml
crates/starclock-agent-api/examples/: g02_agent_benchmark.rs  g02_in_process.rs  g04_universe_benchmark.rs  g04_universe_seed_matrix.rs  g05_real_universe_seed_matrix.rs
crates/starclock-agent-api/src/: action.rs  activity_action.rs  activity_observation.rs  activity_reference.rs  activity_runtime.rs  activity_session.rs  error.rs  lib.rs  observation.rs  schema.rs  session.rs
crates/starclock-agent-api/src/activity_session/: registry.rs
crates/starclock-agent-api/src/session/: registry.rs  tests.rs
crates/starclock-agent-api/tests/: activity_session_loop.rs  hardening_corpus.rs  module_boundary.rs  player_visible_projection.rs  schema_property_contract.rs  standard_session_loop.rs  value_contract.rs
crates/starclock-cli/: Cargo.toml
crates/starclock-cli/examples/: g01_benchmark.rs
crates/starclock-cli/src/: main.rs  standard_v1.rs  universe_v1.rs
crates/starclock-cli/tests/: cli_contract.rs  mcp_stdio.rs  standard_replay_smoke.rs  universe_cli.rs  workspace_boundaries.rs
crates/starclock-combat/: Cargo.toml
crates/starclock-combat/proptest-regressions/: README.md
crates/starclock-combat/src/: benchmark.rs  id.rs  lib.rs  numeric.rs
crates/starclock-combat/src/action/: lower.rs  mod.rs  model.rs
crates/starclock-combat/src/actor/: link.rs  mod.rs  model.rs  store.rs
crates/starclock-combat/src/battle/: aggregate.rs  build.rs  fault.rs  mod.rs  model.rs  spec.rs  spec_codec.rs  state.rs  view.rs
crates/starclock-combat/src/catalog/: action.rs  builder.rs  definition.rs  encounter.rs  index.rs  lifecycle.rs  mod.rs  parameter.rs  rule_validate.rs  selector.rs  table.rs
crates/starclock-combat/src/codec/: mod.rs  state.rs
crates/starclock-combat/src/command/: legal.rs  mod.rs  model.rs  validate.rs
crates/starclock-combat/src/effect/: break_effect.rs  mod.rs  model.rs  shield.rs  state.rs
crates/starclock-combat/src/event/: cause.rs  mod.rs  model.rs
crates/starclock-combat/src/formula/: damage.rs  effect.rs  hp.rs  mod.rs  model.rs  shield.rs  sustain.rs  toughness.rs
crates/starclock-combat/src/modifier/: mod.rs  model.rs  registry.rs  resolve.rs  state.rs
crates/starclock-combat/src/numeric/: domain.rs  mod.rs  rounding.rs  scalar.rs  tests.rs
crates/starclock-combat/tests/: ability_program_execution.rs  action_resources.rs  assist_skill_subsystem.rs  battle_boundary.rs  catalog_contract.rs  damage_lifecycle.rs  damage_sustain_pipeline.rs  effect_resource_pipeline.rs  elation_subsystem.rs  enemy_orchestration.rs  linked_lifecycle.rs  modifier_pipeline.rs  numeric_formula_oracle.rs  numeric_golden.rs  property_contract.rs  reaction_scheduler.rs  rng_golden.rs  rule_ir_contract.rs  toughness_formula.rs
crates/starclock-data/: Cargo.toml
crates/starclock-data/src/: build_lower.rs  bundle.rs  catalog.rs  catalog_character_partition_tests.rs  catalog_light_cone_tests.rs  catalog_lookup.rs  catalog_manifest.rs  catalog_support.rs  catalog_tests.rs  coverage.rs  domain_catalog.rs  effect_lower.rs  encounter_lower.rs  lib.rs  lifecycle_lower.rs  light_cone_lower.rs  modifier_lower.rs  native_handler_lower.rs  operation_lower.rs  probe_tests.rs  rule_lower.rs  selector_lower.rs  standard_lower.rs  standard_v1.rs
crates/starclock-data/tests/: production_hit_plans.rs
crates/starclock-mcp/: Cargo.toml
crates/starclock-mcp/examples/: g02_authorized_http.rs  g02_http_benchmark.rs
crates/starclock-mcp/src/: activity_tools.rs  authorization.rs  error.rs  http.rs  http_authority_test.rs  http_observability.rs  http_observability_test.rs  http_quota_test.rs  lib.rs  metadata.rs  rate_limit.rs  resources.rs  server.rs  stdio.rs  tools.rs
crates/starclock-mcp/tests/: http_conformance.rs
crates/starclock-mode-universe/: Cargo.toml
crates/starclock-mode-universe/src/: ability_runtime.rs  abundance_runtime.rs  baseline_controller.rs  baseline_runner.rs  battle_contribution.rs  battle_materialization.rs  battle_materialization_digest.rs  battle_overlay.rs  battle_rule_lowering.rs  battle_technique.rs  blessing_runtime.rs  catalog.rs  curio.rs  curio_activity.rs  curio_effect_runtime.rs  curio_lowering.rs  curio_runtime.rs  definition.rs  destruction_runtime.rs  digest.rs  elation_runtime.rs  encounter.rs  encounter_content_runtime.rs  encounter_digest.rs  encounter_lowering.rs  encounter_slot.rs  entry.rs  entry_identity.rs  error.rs  erudition_runtime.rs  handler_bundle.rs  hunt_runtime.rs  id.rs  lib.rs  lowering.rs  negative_curio_runtime.rs  nested_battle_executor.rs  nihility_runtime.rs  occurrence.rs  occurrence_effect_runtime.rs  (+26 more)
crates/starclock-mode-universe/tests/: ability_runtime.rs  abundance_runtime.rs  battle_contribution.rs  battle_materialization.rs  blessing_runtime.rs  curio_effect_runtime.rs  curio_runtime.rs  destruction_runtime.rs  elation_runtime.rs  encounter_content_runtime.rs  encounter_runtime.rs  entry_compilation.rs  erudition_runtime.rs  handler_bundle.rs  hunt_runtime.rs  mechanic_battle_integration.rs  negative_curio_runtime.rs  nihility_runtime.rs  occurrence_effect_runtime.rs  path_runtime.rs  preservation_runtime.rs  propagation_runtime.rs  remembrance_runtime.rs  run_runtime.rs  service_effect_runtime.rs  service_interaction_runtime.rs  topology_runtime.rs
crates/starclock-replay/: Cargo.toml
crates/starclock-replay/proptest-regressions/: README.md
crates/starclock-replay/src/: activity.rs  activity_identity.rs  activity_v2.rs  activity_v3.rs  battle.rs  battle_event.rs  codec.rs  component.rs  digest.rs  format.rs  format_v2.rs  format_v3.rs  lib.rs  nested_battle.rs  record.rs
crates/starclock-replay/tests/: activity_replay.rs  battle_property_contract.rs  codec_golden.rs  component_identity.rs  nested_identity_v3.rs  property_contract.rs
tools/mcp-sdk-capability/: Cargo.toml
tools/mcp-sdk-capability/src/: lib.rs
tools/mcp-sdk-capability/tests/: capabilities.rs
tools/workbook-bootstrap/: Cargo.toml  main.rs
(+1127 files in other folders)
