[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
fixnum = { version = "=0.9.5", default-features = false, features = ["i64", "std"] }
serde = { version = "=1.0.228", default-features = false, features = ["derive", "rc", "std"] }
zstd = { version = "=0.13.3", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
