[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
allocation-counter = { version = "=0.8.1", default-features = false }
axum = { version = "=0.8.9", default-features = false, features = ["http1", "tokio"] }
fixnum = { version = "=0.9.5", default-features = false, features = ["i64", "std"] }
rand = { version = "=0.10.2", default-features = false, features = ["chacha", "std"] }
proptest = { version = "=1.11.0", default-features = false, features = ["std"] }
rmcp = { version = "=2.2.0", default-features = false, features = ["client", "macros", "server", "transport-io", "transport-streamable-http-server"] }
schemars = { version = "=1.2.1", default-features = false, features = ["derive", "std"] }
serde = { version = "=1.0.228", default-features = false, features = ["derive", "rc", "std"] }
serde_json = { version = "=1.0.151", default-features = false, features = ["std"] }
sha2 = { version = "=0.11.0", default-features = false }
zstd = { version = "=0.13.3", default-features = false }
tokio = { version = "=1.53.1", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "=0.5.3", default-features = false, features = ["util"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
