[package]
name = "starclock-agent-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
starclock-ai = { path = "../starclock-ai" }
starclock-combat = { path = "../starclock-combat" }
starclock-data = { path = "../starclock-data" }
starclock-replay = { path = "../starclock-replay" }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
