[package]
name = "starclock-agent-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[[example]]
name = "g02_agent_benchmark"
path = "examples/g02_agent_benchmark.rs"
required-features = ["benchmark-harness"]

[[example]]
name = "g04_universe_benchmark"
path = "examples/g04_universe_benchmark.rs"
required-features = ["benchmark-harness"]

[features]
benchmark-harness = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
starclock-ai = { path = "../starclock-ai" }
starclock-activity = { path = "../starclock-activity" }
starclock-combat = { path = "../starclock-combat" }
starclock-data = { path = "../starclock-data" }
starclock-mode-universe = { path = "../starclock-mode-universe" }
starclock-replay = { path = "../starclock-replay" }

[dev-dependencies]
allocation-counter.workspace = true
proptest.workspace = true
