[package]
name = "starclock-combat"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
benchmark-instrumentation = []

[dependencies]
fixnum.workspace = true
rand.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
