[package]
name = "starclock-mcp"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
starclock-agent-api = { path = "../starclock-agent-api" }

[dev-dependencies]
tokio.workspace = true
