[package]
name = "starclock-mcp"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[[example]]
name = "g02_http_benchmark"
path = "examples/g02_http_benchmark.rs"
required-features = ["benchmark-harness"]

[features]
benchmark-harness = []

[dependencies]
axum.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
starclock-agent-api = { path = "../starclock-agent-api" }
tokio.workspace = true
[dev-dependencies]
allocation-counter.workspace = true
tower.workspace = true
