[package]
name = "starclock-mode-universe"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
starclock-activity = { path = "../starclock-activity" }
starclock-combat = { path = "../starclock-combat" }
starclock-data = { path = "../starclock-data" }
starclock-replay = { path = "../starclock-replay" }
zstd.workspace = true
