[package]
name = "starclock-replay"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
sha2.workspace = true
starclock-activity = { path = "../starclock-activity" }
starclock-combat = { path = "../starclock-combat" }

[dev-dependencies]
proptest.workspace = true
